# InsightRAG-Enterprise-Pro

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  ui.py
configs/: config.yaml  model_card.md
reports/: latest.json  latest.md  report.aux  report.out  report.tex
src/python/insight_rag/: __init__.py  config.py
src/python/insight_rag/agents/: __init__.py  query_router.py  rag_agent.py
src/python/insight_rag/evaluation/: __init__.py  evaluator.py  metrics.py
src/python/insight_rag/graph/: __init__.py  entity_extractor.py  knowledge_graph.py
src/python/insight_rag/ingestion/: __init__.py  chunker.py  document_loader.py
src/python/insight_rag/search/: __init__.py  bm25_search.py  embedder.py  hybrid_search.py  reranker.py
src/python/insight_rag/utils/: __init__.py  benchmark.py  logger.py  report_generator.py
tests/: __init__.py  test_api.py  test_chunker.py  test_evaluation.py  test_graph.py  test_search.py
