[project]
name = "insightrag-pro"
version = "1.0.0"
description = "Flagship Enterprise Retrieval-Augmented Generation (RAG) Platform"
authors = [
    { name = "Portfolio Owner", email = "portfolio@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "streamlit>=1.22.0",
    "plotly>=5.14.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "networkx>=3.0",
    "pdfplumber>=0.9.0",
    "sentence-transformers>=2.2.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
    "types-requests>=2.31.0"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "C4", "N"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src", "app"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/python/insight_rag --cov-report=term-missing"
